03/01/18 Julien Dutheil
* Fixed bug in AlnFilter when relative proportions are set. Proportion was relative to block and not to window, which was incorrect.

22/12/17 Julien Dutheil
* Improved GTF parser, bug fixed when empty token in last column.

10/12/17 -*- Version 2.3.2 -*-

10/05/17 -*- Version 2.3.0 -*-

03/04/17 Julien Dutheil
* VCF export now can export all position, including non-variable ones.

04/07/16 Julien Dutheil
* Alignment filters now allow for relative proportions of gaps.

24/05/16 Julien Dutheil
* Added output for SequenceLDhot.
* Added more statistics in SiteMafStatistics: constant, bi-, tri- and quadriallelic site counts.

26/04/16 Julien Dutheil
* Portage to c++11
* Added RemoveEmptySequencesMafFilter class.

10/02/16 Julien Dutheil
* Fixed bug in AlignmentFilter2: also counts gaps at begining of window!

04/02/16 Julien Dutheil
* Added support for features in BedGraph format.
* Added lift over filter as MafIterator.

08/12/15 Julien Dutheil
* Added Tajima's D computation.

22/11/15 Julien Dutheil
* Fix bug in FeatureFilter when two features are exactly following each other.

23/04/15 Julien Dutheil
* Fix another bug in feature extraction on negative strands.

31/03/15 Julien Dutheil
* OutputAlignments now allows to discard coordinates in output.

13/01/15 Julien Dutheil
* OutputAlignments can now use coordinates of ref species infile names.

07/01/15 Julien Dutheil
* Added export filter for MSMC.

22/09/14 -*- Version 2.2.0 -*-

22/08/13 Julien Dutheil
* Sequence diversity estimators (Watterson theta)

12/08/13 Julien Dutheil
* New Four species statistics

06/03/13 -*- Version 2.1.0 -*-

05/02/13 Julien Dutheil
* Added VCF export

21/01/13 Julien Dutheil
* Compiles with -Wconversion

31/10/12 Julien Dutheil
* Added SequenceStreamToMafIterator

30/07/12 Julien Dutheil
* Migrated files from bpp-seq to bpp-seq-omics.


*** bpp-seq log copied here for information ***

18/07/12 Julien Dutheil